--- a/code/style.css
+++ b/code/style.css
@@ -16,7 +16,7 @@ body, html {
 .hero-image {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./tvättahåret.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/tvättahåret.jpeg");
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
@@ -130,7 +130,7 @@ h2 {
   width: 100%;
   padding: 15px;
   color:antiquewhite;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./sjö.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("assets/sjö.jpeg");
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
