--- a/code/style.css
+++ b/code/style.css
@@ -138,7 +138,7 @@ h2 {
   background-attachment: fixed;
 }
 
-.question {
+.question-container {
   display: flex;
   background:rgb(16, 37, 54);
   border-radius: 20px;
@@ -147,16 +147,16 @@ h2 {
   width: 100%;
 }
 
-.active + .answer{
+.answer-container {
+  display: none;
+}
+
+.active {
   display: block;
 }
 
-.answer {
-  display: none;
-  padding: 15px;
-  margin: 2px;
-  width: 100%;
-}
+
+
 
 /* Footer */
 footer{
@@ -179,13 +179,13 @@ footer p{
   width: 20%;
 }
 
-.question {
+.question-container {
   padding: 15px;
   margin: 2px;
   width: 60%;
 }
   
-.answer{
+.answer-container {
   padding: 15px;
   margin: 2px;
   width: 60%;
@@ -227,13 +227,13 @@ footer p{
   padding: 15px;
 }
 
-.question {
+.question-container {
   padding: 15px;
   margin: 2px;
   width: 40%;
 }
   
-.answer{
+.answer-container{
   padding: 15px;
   margin: 2px;
   width: 40%;
