--- a/code/style.css
+++ b/code/style.css
@@ -140,6 +140,8 @@ h2 {
 
 .question-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   background:rgb(16, 37, 54);
   border-radius: 20px;
   padding: 15px;
